fix: missing margin on period label

--- a/src/components/period-countdown/period-countdown.scss
+++ b/src/components/period-countdown/period-countdown.scss
@@ -35,7 +35,7 @@
 
     &-item {
       display: flex;
-      margin: 7px 0;
+      margin: 7px;
       vertical-align: middle;
     }
   }
